src/main/java/org/example/videoclub/errors/EstadoNoEncontradoException.java
package org.example.videoclub.errors;

public class EstadoNoEncontradoException extends Exception{

    public EstadoNoEncontradoException(String message) {
        super(message);
    }

}
